fix map z-index

--- a/styles/Footer/Footer.scss
+++ b/styles/Footer/Footer.scss
@@ -35,6 +35,7 @@
             &>div {
                 width: 100%;
                 height: 100%;
+                z-index: 0;
             }
         }
         .link {
